<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="look">Look at my GUI</string>
    <string name="click_here">CLICK HERE</string>
    <string name="checkout">Check this out!</string>
    <string name="switch_on">Switch on / off</string>
    <string name="type_here">Type Here</string>
    <string name="toast_message">Here is more information</string>
    <string name="snap_message">Switch is now </string>
    <string name="flag_desc">American Flag</string>
    <string name="enter_email">Enter your email address:</string>
    <string name="type_email">Type email here</string>
    <string name="type_pass">Type your password:</string>
    <string name="Login">LOGIN</string>
    <string name="YourPro">Your Profile:</string>
    <string name="yourname">Your name:</string>
    <string name="entername">Enter your name</string>
    <string name="youremail">Your email:</string>
    <string name="enteremail">Enter your email</string>
    <string name="yourpic">Your picture:</string>
    <string name="clickpicbtn">Click the button above to take a picture</string>
    <string name="chat">Chat</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="weather">Weather</string>
    <string name="CurrentTemp"> Current Temp:</string>
    <string name="MinTemp"> Min Temp:</string>
    <string name="MaxTemp"> Max Temp:</string>
    <string name="UVRating"> UV:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="MessageHere">Message Here</string>
    <string name="ID">ID=</string>
    <string name="isMessage">Is a Send Message</string>
    <string name="hide">HIDE</string>
    <string name="gotoolbar">Go to Toolbar page</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="me">Eltire Hared</string>
    <string name="myEmail">hare0034@algonquinlive.com</string>
    <string name="GoLogin">Go back to Login</string>
    <string name="mail">Mail</string>
    <string name="contacts">Contacts</string>
    <string name="display">Display</string>
    <string name="Profile">Profile</string>
    <string name="ChatPage">Chat Page</string>
    <string name="weatherfor">Weather Forecast</string>
    <string name="settings">Settings</string>

</resources>