<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="4"
    android:columnCount="2"
   >

    <TextView
        android:id="@+id/look_at_gui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:text="@string/look"
        android:textSize="30sp" />

    <Button
        android:id="@+id/click_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_weight="1"
        android:text="@string/click_here" />

    <CheckBox
        android:id="@+id/check_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="fill_horizontal"
        android:text="@string/checkout" />

    <ImageButton
        android:id="@+id/flag"
        android:contentDescription="@string/flag_desc"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:src="@drawable/flag"
        android:layout_gravity="fill_horizontal"
        android:layout_column="0"
        android:layout_row="2"
       />

    <Switch
        android:id="@+id/switchOnOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:text="@string/switch_on"
        />

    <EditText
        android:id="@+id/editBox"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:hint="@string/type_here" />

</GridLayout>