<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/look_at_gui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/look"
        android:textSize="30sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        />

    <Button
        android:id="@+id/click_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/look_at_gui"
        android:layout_alignParentStart="true"
        android:layout_gravity="fill_horizontal"
        android:text="@string/click_here"
        android:layout_alignEnd="@id/flag"
        />

    <CheckBox
        android:id="@+id/check_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/look_at_gui"
        android:layout_alignParentEnd="true"
        android:layout_gravity="fill_horizontal"
        android:layout_toEndOf="@id/check_out"
        android:text="@string/checkout"
        android:layout_alignStart="@id/switchOnOff"
        />

    <ImageButton
        android:id="@+id/flag"
        android:contentDescription="@string/flag_desc"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@drawable/flag"
        android:layout_gravity="fill_horizontal"
        android:layout_below="@id/click_here"
        android:layout_alignParentStart="true"
      />

    <Switch
        android:id="@+id/switchOnOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/switch_on"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/click_here"
        android:layout_toEndOf="@id/flag"

        />

    <EditText
        android:id="@+id/editBox"
        android:inputType="text"
        android:autofillHints="@string/type_here"
        android:layout_width="wrap_content"
        android:layout_height="91dp"
        android:layout_gravity="fill_horizontal"
        android:hint="@string/type_here"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/flag"/>

</RelativeLayout>