<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsFragment"
    android:id="@+id/fragmentLoc">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MessageHere"
        android:layout_marginBottom="5dp"/>
    <TextView
        android:id="@+id/idMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/message"
        android:text="@string/ID"
        android:layout_marginBottom="5dp"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkBtn"
        android:layout_below="@+id/idMsg"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/isSendMsg"
        android:layout_below="@+id/idMsg"
        android:layout_toRightOf="@id/checkBtn"
        android:text="@string/isMessage"
        android:layout_marginTop="5dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hideBtn"
        android:layout_alignParentBottom="true"
        android:text="@string/hide"/>


</RelativeLayout>